# image_agent

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  files.txt  git_history.txt  package-lock.json  package.json
backend/: check_torch.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_generation_test.py
backend/app/: main.py
backend/app/api/middleware/: error_handler.py  request_logging.py
backend/app/api/v1/: __init__.py  schemas.py
backend/app/api/v1/endpoints/: downloads.py  generations.py  models.py  queue.py  settings.py  system.py  websocket.py
backend/app/config/: logging_config.py  settings.py
backend/app/core/constants/: defaults.py
backend/app/core/entities/: generation.py  image_record.py  model_info.py  queue_item.py
backend/app/core/enums/: generation_type.py  model_type.py  scheduler_type.py  status.py
backend/app/core/exceptions/: base.py
backend/app/core/interfaces/: ai_engine.py  event_bus.py  model_loader.py  queue_manager.py  repositories.py  storage.py
backend/app/di/: container.py
backend/app/engine/: engine_manager.py  model_loader.py  scheduler_factory.py  vram_manager.py
backend/app/engine/pipelines/: __init__.py  base.py  img2img.py  inpaint.py  txt2img.py
backend/app/infrastructure/database/: connection.py  models.py
backend/app/infrastructure/database/repositories/: base.py  generation_repo.py  image_repo.py  model_repo.py  settings_repo.py
backend/app/infrastructure/events/: event_bus.py  event_types.py
backend/app/infrastructure/queue/: queue_manager.py
backend/app/infrastructure/storage/: local_storage.py
backend/app/services/: download_service.py  generation_service.py  model_service.py  queue_worker.py  system_service.py
backend/tests/unit/api/: test_api.py
backend/tests/unit/engine/: test_engine.py
docs/: ARCHITECTURE.md  TODO.md  (+6 more)
(+23 files in other folders)
